--- a/.gitignore
+++ b/.gitignore
@@ -11,141 +11,70 @@ import {
   executeStoreProcedure
 } from '#core/data/mssql/index.js';
 
+
+
+  /* …imports inalterados … */
+
 /* ───────────────────────── helpers SQL ─────────────────────────── */
 
 async function getPackageData(cifno) {
-  const conn   = await connectToFeeMgmtDb();
-  const [row]  = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
-  if (!row) return {};
+  const conn  = await connectToFeeMgmtDb();
+  const [row] = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
+  if (!row) return {};                         // ← não achou nada? devolve objeto vazio
 
   return {
     defaultFeePackageId : row['Default Fee Package Id'] ?? null,
-    branchCity          : row['Branch City']?.trim()         || '',
-    branchState         : row['Branch State']?.trim()        || '',
-    branchType          : row['Branch Type']?.trim()         || '',
-    defaultPackageType  : row['Default Package Type']?.trim()|| '',
-    feePackage          : row['Default Fee Package']?.trim() || '',
+    branchCity          : row['Branch City']?.trim()          || '',
+    branchState         : row['Branch State']?.trim()         || '',
+    branchType          : row['Branch Type']?.trim()          || '',
+    defaultPackageType  : row['Default Package Type']?.trim() || '',
+    feePackage          : row['Default Fee Package']?.trim()  || '',
   };
 }
 
-async function getStandardFees(packageId) {
-  const conn = await connectToFeeMgmtDb();
-  const rows = await executeStoreProcedure(
-                conn, 'sp_get_standard_fees_bypackage',
-                { FeePackageId: packageId });
-  console.log('STD‑rows', rows?.length);
-  return rows ?? [];
-}
+/*  …getStandardFees / getExceptionFees idem…  */
 
-async function getExceptionFees(packageId) {
-  const conn = await connectToFeeMgmtDb();
-  const rows = await executeStoreProcedure(
-                conn, 'sp_get_exception_fees_bypackage',
-                { FeePackageId: packageId });
-  console.log('EXC‑rows', rows?.length);
-  return rows ?? [];
-}
-
-function getDocumentUrl(id) {
+function getDocumentUrl(id){
   const urls = global.environment.scheduleUrls || {};
   const key  = ({ 1:'intlPB3', 2:'uSPBIndividual3', 3:'uSPBCorporation3' })[id];
   return key ? urls[key] || '' : '';
 }
 
+/* …Mongo helpers e mapeamentos inalterados … */
 
-async function getFeeStandard(filter) {
-  return Fee.find({ $or: filter })
-            .select({ feeType:1, feeGroups:{ name:1, fields:1, code:1 } })
-            .lean();
-}
-
-function findGroup(fee, name){ return fee?.feeGroups?.find(g => g.name === name); }
-
-const feeCodeMap = { JH001:1, JH002:2, JH010:3, JH008:4 };
-
-function applyStandardAmounts(mongoFees, stdRows){
-  mongoFees.forEach(fee => {
-    const stdGrp = findGroup(fee, 'Standard Fees');
-    if (!stdGrp) return;
-
-    stdGrp.fields.forEach(field => {
-      const row = stdRows.find(r => parseInt(r.FeeType,10) === field.code);
-      if (!row) return;
-
-      const amt = Number(row.FeeAmount);
-      field.defaultValue = amt.toString();          
-      field.labelValue   = numberToCurrency(amt);  
-    });
-  });
-}
-
-function applyExceptionAmounts(mongoFees, excRows){
-  /* indexa por FeeCode para lookup rápido */
-  const byCode = excRows.reduce((acc,r)=>{
-    (acc[r.FeeCode] ??= []).push(r); return acc;
-  },{});
-
-  mongoFees.forEach(fee => {
-    const excGrp = findGroup(fee, 'Exception Request');
-    if (!excGrp) return;
-
-    excGrp.fields.forEach(field => {
-      const code = Object.entries(feeCodeMap)
-                         .find(([,c])=>c===field.code)?.[0];
-      const rows = code ? byCode[code] : null;
-      if (!rows?.length) return;
-
-      field.exceptionOptions = rows.map(r => ({
-        value  : Number(r.Amount).toString(),
-        text   : numberToCurrency(r.Amount),
-        visible: true,
-        retired: false
-      }));
-
-      field.defaultValue = '';
-      field.labelValue   = '';
-    });
-  });
-}
-
-function syncExceptionLabels(feesArr){
-  feesArr.forEach(fee=>{
-    const exc = findGroup(fee,'Exception Request');
-    if(!exc) return;
-    exc.fields.forEach(f=>{
-      const val = f.defaultValue;
-      f.labelValue = val ? numberToCurrency(Number(val)) : '$0.00';
-    });
-  });
-}
-
-
+/* ================================================================= */
 export default class FeeGetByCifUseCase {
 
-  async execute({ customerAccount }){
-    /* 1) carrega modelo Mongo */
+  async execute({ customerAccount }) {
+
+    /* 1) modelo‑padrão Mongo */
     const fees = await getFeeStandard([
-      { feeType:'Customer Fees'     },
+      { feeType:'Customer Fees' },
       { feeType:'Bank Account Fees' },
       { feeType:'Investment Account Fees' }
     ]);
 
+    /* 2) dados de Package — usa 1 como fallback se vier null           */
     const pkgData   = await getPackageData(customerAccount[0].cifno);
-    const packageId = pkgData.defaultFeePackageId;         
+    const packageId = pkgData.defaultFeePackageId ?? 1;      //  ← ajuste #1
 
-    const stdRows = await getStandardFees (packageId);
+    /* 3) Standard / Exception – sequencial para não colidir conexões  */
+    const stdRows = await getStandardFees (packageId);       //  ← ajuste #2
     const excRows = await getExceptionFees(packageId);
 
-    applyStandardAmounts (fees, stdRows);
-    applyExceptionAmounts(fees, excRows);
+    applyStandardAmounts (fees, stdRows);   // preenche ONLY “Standard Fees”
+    applyExceptionAmounts(fees, excRows);   // preenche ONLY “Exception Request”
 
-    customerAccount.forEach(acc=>{
-      Object.assign(acc, pkgData);
+    /* 4) enriquece contas                                          */
+    customerAccount.forEach(acc => {
+      Object.assign(acc, pkgData);          // cidade, estado, etc.
 
+      /* só grava exceptionAmount – current fee vem do próprio SELECT */
       const exc = excRows.find(e => e.FeeCode === acc.feeCode);
       if (exc) acc.exceptionAmount = Number(exc.Amount);
     });
 
+    /* 5) construtores existentes                                    */
     const result = { fees: [] };
     const [customer, bank, investment] = [
       new CustomerFees      (fees, customerAccount),
@@ -158,30 +87,33 @@ export default class FeeGetByCifUseCase {
       .filter(f => f.fee && f.fee.feeGroups?.length)
       .forEach(f => result.fees.push(f.fee));
 
+    /* 6) casos ativos                                               */
     const actives = await FeeCase.find({
-      cif       : customerAccount[0].cifno,
-      status    : { $nin:['DONE','REJECTED'] },
+      cif: customerAccount[0].cifno,
+      status: { $nin:['DONE','REJECTED'] },
       caseNumber: { $exists:true }
     });
     result.feesActives = actives.map(({caseNumber,id})=>({caseNumber,id}));
 
+    /* 7) contas + schedule PDF link                                */
     const docUrl = getDocumentUrl(packageId);
-    result.accounts = customerAccount.map(acc=>({
-      cifno              : acc.cifno,
-      ddaNumber          : acc.ddaNumber,
-      branchCity         : acc.branchCity,
-      branchState        : acc.branchState,
-      branchType         : acc.branchType,
-      defaultPackageType : acc.defaultPackageType,
-      feePackage         : acc.feePackage,
-      defaultFeePackageId: acc.defaultFeePackageId,
-      defaultFeePackage  : acc.defaultFeePackage,
-      documentUrl        : docUrl,
-      feeAmount          : acc.feeAmount,
-      exceptionAmount    : acc.exceptionAmount ?? null
+    result.accounts = customerAccount.map(acc => ({
+      cifno               : acc.cifno,
+      ddaNumber           : acc.ddaNumber,
+      branchCity          : acc.branchCity,
+      branchState         : acc.branchState,
+      branchType          : acc.branchType,
+      defaultPackageType  : acc.defaultPackageType,
+      feePackage          : acc.feePackage,
+      defaultFeePackageId : acc.defaultFeePackageId,
+      defaultFeePackage   : acc.defaultFeePackage,
+      documentUrl         : docUrl,
+      feeAmount           : acc.feeAmount,         // do SELECT original
+      exceptionAmount     : acc.exceptionAmount ?? null
     }));
     result.documentUrl = docUrl;
 
+    /* 8) formata labelValue dos Exception (vazio = $0.00)           */
     syncExceptionLabels(result.fees);
 
     return Result.ok(result);
