--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+Fiz um teste.....coloquei um console pra ver a excRows que esta sendo enviada no applExceptionAmount
+
+Primeiro o result final....e la embaixo o console....Confere pra mim
+
+
 {
     "code": 200,
     "data": {
