--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,197 @@
-https://teams.microsoft.com/v2/?meetingjoin=true#/l/meetup-join/19:meeting_MWI4N2IzNDMtODQwMC00NzhjLWE4MzQtZTdhNGE0YWIyNjE1@thread.v2/0?context=%7b%22Tid%22%3a%228f0133fa-8efb-40b1-8ac6-37c78469f445%22%2c%22Oid%22%3a%2249efe1f2-63d5-434c-aece-714bcd04b3d1%22%7d&anon=true&deeplinkId=0c202e4a-772c-4dde-a892-ca9864d30e98
+import { Fee }                     from '#src/models/entities/Fees.js';
+import Result                      from '#features/shared/result.js';
+import CustomerFees                from '#src/models/CustomerFees.js';
+import BankAccountFee              from '#src/models/BankAccountFee.js';
+import InvestimentAccountFee       from '#src/models/InvestimentAccountFee.js';
+import { FeeCase }                 from '#src/models/entities/FeeCase.js';
+import { Field }                   from '#src/models/entities/Fields.js';
+import numberToCurrency            from '#core/helpers/currency.js';
+import {
+  connectToFeeMgmtDb,
+  executeStoreProcedure
+} from '#core/data/mssql/index.js';
+
+async function getPackageData(cifno) {
+  const conn   = await connectToFeeMgmtDb();
+  const [row]  = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
+  if (!row) return {};
+
+  return {
+    defaultFeePackageId : row['Default Fee Package Id'] ?? null,
+    branchCity          : row['Branch City']?.trim()         || '',
+    branchState         : row['Branch State']?.trim()        || '',
+    branchType          : row['Branch Type']?.trim()         || '',
+    defaultPackageType  : row['Default Package Type']?.trim()|| '',
+    feePackage          : row['Default Fee Package']?.trim() || '',
+  };
+}
+
+async function getStandardFees(packageId) {
+  const conn = await connectToFeeMgmtDb();
+  const rows = await executeStoreProcedure(
+                conn, 'sp_get_standard_fees_bypackage',
+                { FeePackageId: packageId });
+  console.log('STD‑rows', rows?.length);
+  return rows ?? [];
+}
+
+async function getExceptionFees(packageId) {
+  const conn = await connectToFeeMgmtDb();
+  const rows = await executeStoreProcedure(
+                conn, 'sp_get_exception_fees_bypackage',
+                { FeePackageId: packageId });
+  console.log('EXC‑rows', rows?.length);
+  return rows ?? [];
+}
+
+function getDocumentUrl(id) {
+  const urls = global.environment.scheduleUrls || {};
+  const key  = ({ 1:'intlPB3', 2:'uSPBIndividual3', 3:'uSPBCorporation3' })[id];
+  return key ? urls[key] || '' : '';
+}
+
+
+async function getFeeStandard(filter) {
+  return Fee.find({ $or: filter })
+            .select({ feeType:1, feeGroups:{ name:1, fields:1, code:1 } })
+            .lean();
+}
+
+function findGroup(fee, name){ return fee?.feeGroups?.find(g => g.name === name); }
+
+const feeCodeMap = { JH001:1, JH002:2, JH010:3, JH008:4, BPS002:6, BPS003:5, BPS004:7, BPS005:7 };
+
+
+// function sqlToFeeType({ FeeCode, BPSFeeTypeCode }){
+//   const byFeeCode = { JH001:1, JH002:2, JH010:3, JH008:4, BPS002:6, BPS003:5, BPS004:7, BPS005:7 };
+//   const byBpsCode = { S:5, C:6, E:7, O:7 };
+//   if (FeeCode && byFeeCode[FeeCode])       return byFeeCode[FeeCode];
+//   if (BPSFeeTypeCode && byBpsCode[BPSFeeTypeCode]) return byBpsCode[BPSFeeTypeCode];
+//   return 0;
+// }
+
+function applyStandardAmounts(mongoFees, stdRows){
+  mongoFees.forEach(fee => {
+    const stdGrp = findGroup(fee, 'Standard Fees');
+    if (!stdGrp) return;
+
+    stdGrp.fields.forEach(field => {
+      const row = stdRows.find(r => parseInt(r.FeeType,10) === field.code);
+      if (!row) return;
+
+      const amt = Number(row.FeeAmount);
+      field.defaultValue = amt.toString();          
+      field.labelValue   = numberToCurrency(amt);  
+    });
+  });
+}
+
+function applyExceptionAmounts(mongoFees, excRows){
+  const byCode = excRows.reduce((acc,r)=>{
+    (acc[r.FeeCode] ??= []).push(r); return acc;
+  },{});
+
+  mongoFees.forEach(fee => {
+    const excGrp = findGroup(fee, 'Exception Request');
+    if (!excGrp) return;
+
+    excGrp.fields.forEach(field => {
+      const code = Object.entries(feeCodeMap)
+                         .find(([,c])=>c===field.code)?.[0];
+      const rows = code ? byCode[code] : null;
+      if (!rows?.length) return;
+
+      field.exceptionOptions = rows.map(r => ({
+        value  : Number(r.Amount).toString(),
+        text   : numberToCurrency(r.Amount),
+        visible: true,
+        retired: false
+      }));
+
+      field.defaultValue = '';
+      field.labelValue   = '';
+    });
+  });
+}
+
+function syncExceptionLabels(feesArr){
+  feesArr.forEach(fee=>{
+    const exc = findGroup(fee,'Exception Request');
+    if(!exc) return;
+    exc.fields.forEach(f=>{
+      const val = f.defaultValue;
+      f.labelValue = val ? numberToCurrency(Number(val)) : '$0.00';
+    });
+  });
+}
+
+
+export default class FeeGetByCifUseCase {
+
+  async execute({ customerAccount }){
+    const fees = await getFeeStandard([
+      { feeType:'Customer Fees'     },
+      { feeType:'Bank Account Fees' },
+      { feeType:'Investment Account Fees' }
+    ]);
+
+    const pkgData   = await getPackageData(customerAccount[0].cifno);
+    const packageId = pkgData.defaultFeePackageId;         
+
+    const stdRows = await getStandardFees (packageId);
+    const excRows = await getExceptionFees(packageId);
+
+    console.log(excRows)
+
+    applyStandardAmounts (fees, stdRows);
+    applyExceptionAmounts(fees, excRows);
+
+    customerAccount.forEach(acc=>{
+      Object.assign(acc, pkgData);
+
+      const exc = excRows.find(e => e.FeeCode === acc.feeCode);
+      if (exc) acc.exceptionAmount = Number(exc.Amount);
+    });
+
+    const result = { fees: [] };
+    const [customer, bank, investment] = [
+      new CustomerFees      (fees, customerAccount),
+      new BankAccountFee    (fees, customerAccount),
+      new InvestimentAccountFee(
+        fees, customerAccount, await Field.findOne({ code:7 }))
+    ];
+
+    [customer, bank, investment]
+      .filter(f => f.fee && f.fee.feeGroups?.length)
+      .forEach(f => result.fees.push(f.fee));
+
+    const actives = await FeeCase.find({
+      cif       : customerAccount[0].cifno,
+      status    : { $nin:['DONE','REJECTED'] },
+      caseNumber: { $exists:true }
+    });
+    result.feesActives = actives.map(({caseNumber,id})=>({caseNumber,id}));
+
+    const docUrl = getDocumentUrl(packageId);
+    result.accounts = customerAccount.map(acc=>({
+      cifno              : acc.cifno,
+      ddaNumber          : acc.ddaNumber,
+      branchCity         : acc.branchCity,
+      branchState        : acc.branchState,
+      branchType         : acc.branchType,
+      defaultPackageType : acc.defaultPackageType,
+      feePackage         : acc.feePackage,
+      defaultFeePackageId: acc.defaultFeePackageId,
+      defaultFeePackage  : acc.defaultFeePackage,
+      documentUrl        : docUrl,
+      feeAmount          : acc.feeAmount,
+      exceptionAmount    : acc.exceptionAmount ?? null
+    }));
+    result.documentUrl = docUrl;
+
+    syncExceptionLabels(result.fees);
+
+
+    return Result.ok(result);
+  }
+}
